--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ BODY {
 H1 {
   font-family:  "system-ui";
   font-size: 40px;
-  margin: 30px 40px 40px 40px;
+  padding: 10px 20px 0 20px;
+  margin-bottom: 0;
 }
 
 A,
@@ -16,12 +17,34 @@ SECTION {
   color: #333333;
   text-decoration: none;
 }
-UL OL {
+UL.menu OL {
   padding-bottom: 20px;
 }
 
 A:hover {
   color: pink;
+}
+
+UL.nav {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+  display: inline-flex;
+  flex-wrap: nowrap;
+  justify-content: flex-around;
+  width: 100%;
+}
+
+UL.nav LI {
+  display: inline;
+  flex-grow: 2;
+  text-align: center;
+}
+
+UL.nav LI {
+  background-color: rgba(255, 0, 100, 0.5);
+  padding: 10px;
+  border: 5px solid lightyellow;
 }
 
 .codeFormatting {
