--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap');
+
 BODY {
   background: url('/images/TernaryGradient.png') no-repeat center center fixed;
   background-size: cover;
   font-family:  "-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+}
+
+H1, H2, H3, li, A, button {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 500;
 }
 
 H1 {
@@ -17,6 +24,7 @@ SECTION {
   color: #333333;
   text-decoration: none;
 }
+
 UL.menu OL {
   padding-bottom: 20px;
 }
@@ -29,22 +37,34 @@ UL.nav {
   list-style: none;
   margin-left: 0;
   padding-left: 0;
+  padding-bottom: 30px;
   display: inline-flex;
   flex-wrap: nowrap;
-  justify-content: flex-around;
+  justify-content: space-between;
   width: 100%;
 }
 
 UL.nav LI {
-  display: inline;
+  display: inline-block;
   flex-grow: 2;
   text-align: center;
 }
 
-UL.nav LI {
-  background-color: rgba(255, 0, 100, 0.5);
-  padding: 10px;
-  border: 5px solid lightyellow;
+UL.nav LI A {
+  display: inline-block;
+  width: 80%;
+  color: white;
+  background-color: brown;
+  padding: 5px;
+  margin: 5px;
+  border: none;
+  border-radius: 50px;
+  transition: all 0.4s ease 0s;
+}
+
+UL.nav LI A:hover {
+  color: yellow;
+  background-color: lightskyblue;
 }
 
 .codeFormatting {
@@ -54,7 +74,7 @@ UL.nav LI {
   background-color: #f1f1f1;
   border: 1px solid #999999;
   width: 100%;
-  max-width: 700px;
+  max-width: 800px;
   margin: auto;
   padding: 20px;
 }
@@ -66,7 +86,7 @@ UL.nav LI {
 
 #output {
   width: 100%;
-  max-width: 700px;
+  max-width: 800px;
   margin: 30px auto;
   padding: 20px;
 }
